# whisper-transcriber

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT.md  PROJECT_STEPS.md  README.md  USER_GUIDE.md  whisper-dev.txt
src/: __init__.py  main.py
src/gui/: __init__.py  window.py
src/transcription/: __init__.py  chunker.py  handler.py  processor.py
src/utils/: __init__.py  security.py  settings.py
tests/: test_chunker.py  test_integration.py  test_performance.py  test_processor.py  test_security.py  test_settings.py  test_utils.py
